@@ -53,7 +53,7 @@
             (0 searched <img src="http://ivy.jayasoft.org/images/searched.gif" alt="searched" title="module revisions which required a search with a dependency resolver to be resolved">,
             0 downloaded <img src="http://ivy.jayasoft.org/images/downloaded.gif" alt="downloaded" title="module revisions for which ivy file was downloaded by dependency resolver">,
             1 evicted <img src="http://ivy.jayasoft.org/images/evicted.gif" alt="evicted" title="module revisions which were evicted by others">,
-            0 errors <img src="http://ivy.jayasoft.org/images/error.gif" alt="error" title="module revisions on which error occured">)</td>
+            0 errors <img src="http://ivy.jayasoft.org/images/error.gif" alt="error" title="module revisions on which error occurred">)</td>
 </tr>
 <tr>
 <td class="title">Artifacts</td><td class="value">3 
