@@ -55,7 +55,7 @@
             (0 searched <img title="module revisions which required a search with a dependency resolver to be resolved" alt="searched" src="../images/searched.gif">,
             0 downloaded <img title="module revisions for which ivy file was downloaded by dependency resolver" alt="downloaded" src="../images/downloaded.gif">,
             1 evicted <img title="module revisions which were evicted by others" alt="evicted" src="../images/evicted.gif">,
-            0 errors <img title="module revisions on which error occured" alt="error" src="../images/error.gif">)</td>
+            0 errors <img title="module revisions on which error occurred" alt="error" src="../images/error.gif">)</td>
 </tr>
 <tr>
 <td class="title">Artifacts</td><td class="value">3 
