@@ -273,7 +273,7 @@ name|CacheDownloadOptions
 name|options
 parameter_list|)
 function_decl|;
-comment|/**      * Caches an original module descriptor.      *<p>      * After this call, the original module descriptor file (with no modification nor conversion)      * should be available as a local file.      *</p>      *       * @param resolver      *            the dependency resolver from which the cache request comes from      * @param orginalMetadataRef      *            a resolved resource pointing to the remote original module descriptor      * @param dd      *            the dependency descriptor for which the module descriptor should be cached      * @param requestedMetadataArtifact      *            the module descriptor artifact as requested originally      * @param downloader      *            a ResourceDownloader able to download the original module descriptor resource if      *            required by this cache implementation      * @param options      *            options to apply to cache this module descriptor      * @return a {@link ResolvedModuleRevision} representing the local cached module descriptor, or      *         null if it failed      * @throws ParseException      *             if an exception occured while parsing the module descriptor      */
+comment|/**      * Caches an original module descriptor.      *<p>      * After this call, the original module descriptor file (with no modification nor conversion)      * should be available as a local file.      *</p>      *       * @param resolver      *            the dependency resolver from which the cache request comes from      * @param orginalMetadataRef      *            a resolved resource pointing to the remote original module descriptor      * @param dd      *            the dependency descriptor for which the module descriptor should be cached      * @param requestedMetadataArtifact      *            the module descriptor artifact as requested originally      * @param downloader      *            a ResourceDownloader able to download the original module descriptor resource if      *            required by this cache implementation      * @param options      *            options to apply to cache this module descriptor      * @return a {@link ResolvedModuleRevision} representing the local cached module descriptor, or      *         null if it failed      * @throws ParseException      *             if an exception occurred while parsing the module descriptor      */
 specifier|public
 name|ResolvedModuleRevision
 name|cacheModuleDescriptor
