@@ -2638,7 +2638,7 @@ name|options
 argument_list|)
 return|;
 block|}
-comment|/**      * Resolve the dependencies of a module without downloading corresponding artifacts. The module      * to resolve is given by its ivy file URL. This method requires appropriate configuration of      * the ivy instance, especially resolvers.      *       * @param ivySource      *            url of the ivy file to use for dependency resolving      * @param confs      *            an array of configuration names to resolve - must not be null nor empty      * @param getCache      *            the cache to use - default cache is used if null      * @param date      *            the date to which resolution must be done - may be null      * @return an array of the resolved dependencies      * @throws ParseException      *             if a parsing problem occured in the ivy file      * @throws IOException      *             if an IO problem was raised during ivy file parsing      */
+comment|/**      * Resolve the dependencies of a module without downloading corresponding artifacts. The module      * to resolve is given by its ivy file URL. This method requires appropriate configuration of      * the ivy instance, especially resolvers.      *       * @param ivySource      *            url of the ivy file to use for dependency resolving      * @param confs      *            an array of configuration names to resolve - must not be null nor empty      * @param getCache      *            the cache to use - default cache is used if null      * @param date      *            the date to which resolution must be done - may be null      * @return an array of the resolved dependencies      * @throws ParseException      *             if a parsing problem occurred in the ivy file      * @throws IOException      *             if an IO problem was raised during ivy file parsing      */
 specifier|public
 name|IvyNode
 index|[]
@@ -5667,7 +5667,7 @@ argument_list|)
 return|;
 block|}
 block|}
-comment|/**      * Compute possible conflicts for a node, in the context of an ancestor (a node which has a      * dependency - direct or indirect - on the node for which conflicts should be computed.      *       * @param node      *            the node for which conflicts should be computed      * @param ancestor      *            the ancestor in which conflicts should be computed      * @param conf      *            the configuration of the node in which conflicts should be computed      * @param toevict      *            a collection of nodes which have been evicted during conflict resolution at lower      *            level. It may be empty if no conflict resolution has occured for this node yet, or      *            if no node has been evicted.      * @param selectedNodes      *            a collection of nodes selected during previous conflict resolution for the given      *            node and ancestor. This collection is updated by this call, removing nodes which      *            should be evicted.      * @return a collection of IvyNode which may be in conflict with the given node in the given      *         ancestor. This collection always contain at least the given node.      */
+comment|/**      * Compute possible conflicts for a node, in the context of an ancestor (a node which has a      * dependency - direct or indirect - on the node for which conflicts should be computed.      *       * @param node      *            the node for which conflicts should be computed      * @param ancestor      *            the ancestor in which conflicts should be computed      * @param conf      *            the configuration of the node in which conflicts should be computed      * @param toevict      *            a collection of nodes which have been evicted during conflict resolution at lower      *            level. It may be empty if no conflict resolution has occurred for this node yet, or      *            if no node has been evicted.      * @param selectedNodes      *            a collection of nodes selected during previous conflict resolution for the given      *            node and ancestor. This collection is updated by this call, removing nodes which      *            should be evicted.      * @return a collection of IvyNode which may be in conflict with the given node in the given      *         ancestor. This collection always contain at least the given node.      */
 specifier|private
 name|Collection
 name|computeConflicts
